--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,36 @@
     <artifactId>leetcode-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+        <dependencies>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>4.1.55.Final</version>
+            </dependency>
+            <dependency>
+                <artifactId>poi</artifactId>
+                <groupId>org.apache.poi</groupId>
+                <version>3.15</version>
+            </dependency>
+            <dependency>
+                <artifactId>poi-ooxml</artifactId>
+                <groupId>org.apache.poi</groupId>
+                <version>3.15</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-base</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-web</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+        </dependencies>
+
+
+
     <build>
         <pluginManagement>
             <plugins>
